# udev

./: CMakeLists.txt  LICENSE  NEWS  README.md  check.cmake  config.h.cmake
data/: CMakeLists.txt
data/completions/bash/: udevadm
data/completions/zsh/: _udevadm
data/hwdb/: 20-OUI.hwdb  20-pci-vendor-model.hwdb  CMakeLists.txt
data/rpm/: macros-udev.cmake
data/systemd/: udev-settle.service.cmake  udev-trigger.service.cmake  udevadm-cleanup-db.service.cmake  udevd-control.socket  udevd-control.socket.cmake  udevd-kernel.socket  udevd.service.cmake
lib/: CMakeLists.txt  libudev-device-private.c  libudev-device.c  libudev-enumerate.c  libudev-hwdb-def.h  libudev-hwdb.c  libudev-list.c  libudev-monitor.c  libudev-private.h  libudev-queue.c  libudev-util.c  libudev.c  libudev.h  libudev.pc.cmake  libudev.sym  libudev0.h  utils.h
lib/device/: CMakeLists.txt  action.h  device.h  getaction.c  init.c  libudev-device-private.c  libudev-device.c  setaction.c
lib/utils/: CMakeLists.txt  lookup-group.c  lookup-user.c  parse-argv.c  parse-uint.c  parse-value.c  path-create.c  path-mkdir.c  path-relative.c  path-remove.c  path.h  str.h  test-char-encode.c  test-str-copy.c
lib/utils/path/: create.c  encode.c  mkdir.c  relative.c  remove.c
lib/utils/str/: CMakeLists.txt  append.c  new.c  resize.c  set.c  test-copy.c  test-empty.c  test-eq.c
man/: custom-man.xsl  standard-options.xml  udev-man.cmake  udev.conf.xml  udev.xml  udevadm.xml  udevd.xml
shared/: CMakeLists.txt  cgroup-util.c  cgroup-util.h  conf-files.c  conf-files.h  conf-parser.c  dev-setup.c  dev-setup.h  device-nodes.c  efivars.h  env-util.c  env-util.h  fileio.c  fileio.h  gpt.h  label.c  label.h  log.c  log.h  macro.h  missing.h  mkdir.c  mkdir.h  path-util.c  path-util.h  sparse-endian.h  special.h  strv.c  strv.h  time-util.c  time-util.h  util.c  util.h  virt.c
src/: CMakeLists.txt  keyboard-keys.cmake  udev-util.h  udev.h  udev.pc.cmake
src/accelerometer/: accelerometer.c
src/cdrom_id/: cdrom_id.c
src/collect/: collect.c
src/core/: CMakeLists.txt  udev-ctrl.c  udev-event.c  udev-node.c  udev-node.h  udev-rules.c  udev-watch.c  udev.h
src/core/builtin/: udev-builtin-blkid.c  udev-builtin-btrfs.c  udev-builtin-hwdb.c  udev-builtin-keyboard.c  udev-builtin-kmod.c  udev-builtin-net_id.c  udev-builtin-path_id.c  udev-builtin-usb_id.c  udev-builtin.c
src/core/net/: link-config.c
src/core/rtnl/: rtnl-internal.h  sd-rtnl.c  sd-rtnl.h
src/scsi_id/: scsi_id.c  scsi_serial.c
src/udevadm/: udevadm-hwdb.c  udevadm-info.c  udevadm-monitor.c  udevadm-settle.c  udevadm-test-builtin.c  udevadm-test.c  udevadm-trigger.c  udevadm.c
src/udevd/: udevd.c
src/udevrule/: udevrule-check.c  udevrule-parse.c  udevrule.c  udevrule.h
test/: CMakeLists.txt  test-device-nodes.c  test-libudev.c  test-udev.c  udev-test.c
